--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
     "jwt-decode": "^3.1.2",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
-    "react-spinners": "^0.13.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-signup-login-component": "^1.2.0",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.2",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
