--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-signup-login-component": "^1.2.0",
@@ -29,6 +30,7 @@
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "socket.io-client": "^4.6.1",
+    "sweetalert2": "^11.7.3",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
