--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-responsive-modal": "^6.4.1",
+    "react-responsive-pagination": "^2.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-signup-login-component": "^1.2.0",
